# GeoSeriesSolver

./: .gitignore  ExpressionInputer.py  GeoSeriesSolver.spec  Helpers.py  ImageDisplayer.py  MainWindow.py  PythonEditor.py  README.md  __init__.py  _temp_code.py  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
GeoSeriesSolver/: __about__.py  __init__.py  __main__.py
GeoSeriesSolver/Localizations/: zh.yaml
GeoSeriesSolver/Resources/: Helpers.py  PlotCanvas.py
GeoSeriesSolver/Widgets/: ImageDisplayer.py
Locolizations/: en.yaml  fr.yaml  zh.yaml
Resources/: Helpers.py  PlotCanvas.py  PolarPlotCanvas.py  _temp_code.py
Widgets/: ExpressionInputer.py  ImageDisplayer.py  LatexRender.py  PythonEditor.py
